💩 Fixed Bad Code and Added Plugin Command